--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -6,5 +6,21 @@
     </head>
     <body>
         <h1>Curry</h1>
+        <img src="../images/curry.webp" alt="Picture of a Japanese beef curry">
+        <h2>Description</h2>
+        <h3>Step 1</h3>
+        <p>
+            Heat oil in a large saute pan over medium heat. 
+            Add beef and stir-fry until browned and no longer 
+            pink in the centers, 5 to 7 minutes. Add onions and carrots; 
+            stir-fry until onions start to turn golden, 7 to 8 minutes.
+        </p>
+        <h3>Step 2</h3>
+        <p>
+            Pour in water and add potatoes; add more water if needed to cover. 
+            Cover the pan with a lid and cook until potatoes are soft, 
+            10 to 12 minutes. Add curry sauce mix and stir until mixture 
+            thickens, 3 to 5 minutes.
+        </p>
     </body>
 </html>
