Add ingredients to curry.html

--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -22,5 +22,15 @@
             10 to 12 minutes. Add curry sauce mix and stir until mixture 
             thickens, 3 to 5 minutes.
         </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 tablespoon olive oil</li>
+            <li>1 pound beef stew meat, cut into 1/2-inch cubes</li>
+            <li>2 medium onions, diced</li>
+            <li>5 medium carrots, cut into 1/4-inch rounds</li>
+            <li>6 cups warm water, or more as needed</li>
+            <li>3 large potatoes, peeled and cut into 1/2-inch cubes</li>
+            <li>2 containers of curry sauce mix</li>
+        </ul>
     </body>
 </html>
