Add Steps to the recipe

--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -32,5 +32,14 @@
             <li>3 large potatoes, peeled and cut into 1/2-inch cubes</li>
             <li>2 containers of curry sauce mix</li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Heat oil in saute pan over medium heat</li>
+            <li>Add beef and fry until browned</li>
+            <li>Add onions and carrots and fry until golden</li>
+            <li>Pour water, add potatoes</li>
+            <li>Cover pan until potatoes are soft</li>
+            <li>Add sauce and stir until it thickens</li>
+        </ol>
     </body>
 </html>
