--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/curry.html">Curry Recipe</a>
+        <a href="recipes/fries.html">Fry Recipes</a>
+        <a href="recipes/steak.html">Steak Recipe</a>
     </body>
 </html>
